update tomcat script